testsuite/tests/typecheck/should_fail/T14000.stderr

T14000.hs:8:9: error: [GHC-88464]
    Variable not in scope: noSuchThing
